<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="32dp"
    android:gravity="center">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textSize="26sp"
        android:textStyle="bold"
        android:layout_marginBottom="40dp"/>

    <EditText
        android:id="@+id/regUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/choose_username"
        android:minHeight="48dp"
        android:layout_marginBottom="16dp"/>

    <EditText
        android:id="@+id/regPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/choose_password"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:layout_marginBottom="24dp"/>

    <Button
        android:id="@+id/btnRegisterConfirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register" />

</LinearLayout>