<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:gravity="center_vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_item"
        android:textSize="24sp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"/>

    <EditText
        android:id="@+id/editTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/itemName"
        android:minHeight="48dp"
        android:inputType="text"
        android:layout_marginBottom="15dp"/>

    <Spinner
        android:id="@+id/typeSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:entries="@array/expense_types"
        android:layout_marginBottom="15dp"/>

    <EditText
        android:id="@+id/editAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:hint="@string/amount"
        android:inputType="numberSigned|numberDecimal" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"> <Button
        android:id="@+id/cancelBtn"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_weight="1"
        android:layout_marginEnd="8dp"
        android:text="@string/cancel"
        android:textSize="14sp" /> <Button
        android:id="@+id/saveBtn"
        android:layout_width="0dp"
        android:layout_height="64dp"
        android:layout_weight="1.2" android:text="@string/save_to_database"
        android:textSize="14sp" />

    </LinearLayout>
</LinearLayout>